# Onitama

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  cli.cpp  cli.h  data.h  main.cpp  main.h  movegen.cpp  movegen.h  perft.cpp  perft.h  search.cpp  search.h  types.h  utilities.cpp  utilities.h  zobrist.cpp  zobrist.h
src/cli/: main.cpp
src/cli/modes/: HumanPlayMode.cpp  HumanPlayMode.h  Mode.h  PerftMode.cpp  PerftMode.h  SelfPlayMode.cpp  SelfPlayMode.h  ServerPlayMode.cpp  ServerPlayMode.h
src/core/: movegen.cpp  movegen.h  perft.cpp  perft.h  search.cpp  types.h  utilities.cpp  utilities.h
src/modes/: Mode.h  PerftMode.cpp  PerftMode.h  SelfPlayMode.cpp  SelfPlayMode.h  ServerPlayMode.h
test/: perfttest.cpp
